--- a/css/style-mailbox.css
+++ b/css/style-mailbox.css
@@ -1,6 +1,7 @@
 #mailBox{
 	display:none;z-index:7;position:relative;background-color:white;padding:20px 40px;
-	/* font-family: Consolas, Georgia, "Times New Roman", Times, serif; */
+	font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+	font-size:100%;
 }
 
 #mailBox textarea{
@@ -21,14 +22,14 @@
 
 #mailBox input[type=submit]{
   width:100%;z-index:7;
-  background-color: #4CAF50;
+  background-color: #45a049;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   cursor: pointer;}
   
 #mailBox  input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: #ff8000;
 }
