--- a/css/style-responseHttp.css
+++ b/css/style-responseHttp.css
@@ -1,9 +1,10 @@
 #responseWrapper {width:100%}
 			
 #responseContainer {
+	z-index:7;position:relative;
 	display:none;
 	margin:0 auto; float:center;
 background-color: black;width:85%;
 font-family: Consolas, Georgia, "Times New Roman", Times, serif;font-weight:italic; color: white; padding:20px 20px 20px 20px;}
 				
-#responseContainer p {line-height:160%;	text-align:center; font-size:130%}
+#responseContainer p {line-height:160%;	text-align:center; font-size:130%;	z-index:7;padding:20px;}
