--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,22 @@
+html{font-size:90%;} 
+@media(min-width:60em){html{font-size: 120%}}
+
+body{background-color: #c2c4d8; font-size:16px;}
+
 h1 {
     font-family: Consolas, Georgia, "Times New Roman", Times, serif;
     font-size: 250%;
 	text-align:center;
-	border-bottom :1px gray solid; 
+	border-bottom :1px gray solid; line-height:1.2em;
 }
 
 h2 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-size:200%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:bold;}
+            font-weight:bold;line-height:1.2em;}
 			
 h3 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-size:150%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:normal;}
+            font-weight:normal;line-height:1.2em;}
 
 h4 {margin:15px 0 5px 0;text-align:center; padding:0;
             font-size:135%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
@@ -20,8 +25,10 @@ h4 {margin:15px 0 5px 0;text-align:center; padding:0;
 p {margin:5px 0 5px 0;text-align:center; padding:0 0;
             font-size:120%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:normal;line-height:1.2em;}
-			
-a {text-decoration:none;font-weight:normal;font-size:175%;}
+
+p.thick{  font-weight: bold;color:dodgerblue;}
+	
+a {text-decoration:none;font-weight:normal;font-size:175%;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
 
 a:link {color:black}
 
@@ -29,11 +36,6 @@ a:visited {color:black}
 
 ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
 			
-body{background-color: #c2c4d8; font-size:16px;}
-
-html{font-size:90%;} 
-@media(min-width:60em){html{font-size: 120%}}
-
 .hideable {display:none}
 
 .focusable:focus{
