--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,27 @@ h3 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-weight:normal;line-height:1.2em;}
 
 h4 {margin:15px 0 5px 0;text-align:center; padding:0;
-            font-size:135%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:125%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;}
+
+h5 {margin:1em 0 0 0;text-align:center; padding:0;
+            font-size:125%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-weight:italic; line-height:1.2em;
+			text-align:center;}
 			
 p {margin:5px 0 5px 0;text-align:center; padding:0 0;
             font-size:120%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
-            font-weight:normal;line-height:1.2em;}
+            font-weight:normal;line-height:1.2em;
+			text-align: justify;
+			text-justify: inter-word;
+			}
 
-p.thick{  font-weight: bold;color:dodgerblue;}
+strong{font-weight:bold;font-size:150%;}
+
+div{
+	text-align: justify;
+	text-justify: inter-word;
+}
 	
 a {text-decoration:none;font-weight:normal;font-size:175%;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
 
@@ -189,5 +202,5 @@ min-width:300px;
 
 #footer {clear:both; padding:2px 0;float:bottom; overflow:hidden;
          width:100%;text-align:center;margin-bottom:0;}
-#footer p{font-size:80%;font-weight:italic;margin-top:50px}
+#footer p{font-size:80%;font-weight:italic;margin-top:2.5em;text-align:center;}
 			
