--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ margin-bottom:0px; margin-top:0px;
 padding:10px 10px 10px 10px;
 overflow: auto;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
-min-width:600px;
+min-width:400px;
 }
 			
 .hideable {display:none}
@@ -100,6 +100,20 @@ position:relative;top:5px}
   0%   {color: black;}
   50%  {color: dodgerblue;}
   100% {color: black;}
+}
+
+.fadein {
+	animation: fadein 2s;
+}
+
+@keyframes fadein  {
+  from   {opacity:0;}
+  to  {opacity:1;}
+}
+
+@-webkit-keyframes fadein  {
+  from   {opacity:0;}
+  to  {opacity:1;}
 }
 
 .fadeinBeat {
@@ -151,16 +165,17 @@ position:relative;top:5px}
 
 #menuIconWrapper{background-color:white;position:relative;z-index:5;width:auto;border: 2px solid #f3f3f3;display:inline-block;}
 
-#menuIcon {position:relative;z-index:5;color:black;}
+#menuIconWrapper:hover{background-color:#f3f3f3;}
 
-#menuIcon:hover{color:red}
+#menuIcon {position:relative;z-index:5;color:black;}
 
 #topnavDropMenu{
 background-color:white;z-index:5;display:none;border: 2px solid #f3f3f3;position:absolute;
 box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:350px;min-height:350px;
+animation: fadein 0.5s;
 }
 
-#dropMenu-content{z-index:5;}
+#dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
 #dropMenu-content a{display:block;padding:8px 16px 8px 16px;}
 
