--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ min-width:400px;
 }
 
 .menuButton {color:black;z-index:5;display:inline-block; padding:0 0 0 0;background-color:white;
-position:relative;top:5px}
+position:relative;top:5px;}
 
 .menuButton:hover{color:red}
 
@@ -163,7 +163,8 @@ position:relative;top:5px}
 
 #topnav{width:100%; z-index:5; background-color:white; overflow:hidden;}
 
-#menuIconWrapper{background-color:white;position:relative;z-index:5;width:auto;border: 2px solid #f3f3f3;display:inline-block;}
+#menuIconWrapper{background-color:white;position:relative;z-index:5;width:auto;border: 2px solid #f3f3f3;
+				display:inline-block;}
 
 #menuIconWrapper:hover{background-color:#f3f3f3;}
 
@@ -171,13 +172,13 @@ position:relative;top:5px}
 
 #topnavDropMenu{
 background-color:white;z-index:5;display:none;border: 2px solid #f3f3f3;position:absolute;
-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:350px;min-height:350px;
+box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:30em;min-height:350px;
 animation: fadein 0.5s;
 }
 
 #dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
-#dropMenu-content a{display:block;padding:8px 16px 8px 16px;}
+#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:200%;}
 
 /*#dropMenu-content a:hover {background-color: #f1f1f1;}*/
 
@@ -208,7 +209,7 @@ animation: fadein 0.5s;
 /*#logoWrapper {float:right;}			
 #logoWrapper  img{height:100px;vertical-align: middle;}*/
 			
-#androidBadge {float:right;}
+#androidBadge {float:right;display:inline-block;}
 
 #androidBadge img{max-height:90px;}
 
@@ -218,4 +219,3 @@ animation: fadein 0.5s;
 #footer {clear:both; padding:2px 0;float:bottom; overflow:hidden;
          width:100%;text-align:center;margin-bottom:0;}
 #footer p{font-size:80%;font-weight:italic;margin-top:4em;text-align:center;}
-			
