--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,13 @@ position:relative;top:5px;}
 
 @-webkit-keyframes blueheart {
   0%   {color: black;}
-  50%  {color: dodgerblue;}
+  50%  {color: blue;}
   100% {color: black;}
 }
 
 @keyframes blueheart {
   0%   {color: black;}
-  50%  {color: dodgerblue;}
+  50%  {color: blue;}
   100% {color: black;}
 }
 
@@ -161,10 +161,10 @@ position:relative;top:5px;}
 	}
 }
 
-#topnav{width:100%; z-index:5; background-color:white; overflow:hidden;padding:0;}
+#topnav{width:100%; z-index:5; background-color:white; overflow:hidden;}
 
 #menuIconWrapper{background-color:white;position:relative;z-index:5;width:auto;border: 2px solid #f3f3f3;
-				display:inline-block;}
+				display:inline-block;margin-left:10px;margin-top:10px;}
 
 #menuIconWrapper:hover{background-color:#f3f3f3;}
 
