--- a/css/style.css
+++ b/css/style.css
@@ -219,3 +219,87 @@ animation: fadein 0.5s;
 #footer {clear:both; padding:2px 0;float:bottom; overflow:hidden;
          width:100%;text-align:center;margin-bottom:0;}
 #footer p{font-size:80%;font-weight:italic;margin:4em auto 1em auto;text-align:center;}
+
+.greenPulse {
+  -webkit-animation-name: greenpulse; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 9s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-iteration-count: infinite;
+  animation-name: greenpulse;
+  animation-duration: 9s;
+  animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes greenpulse {
+  0%   {color: black;}
+  50%  {color: green;}
+  100% {color: black;}
+}
+
+@keyframes greenpulse {
+  0%   {color: black;}
+  50%  {color: green;}
+  100% {color: black;}
+}
+
+.yellowPulse {
+  -webkit-animation-name: yellowpulse; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 10.5s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-iteration-count: infinite;
+  animation-name: yellowpulse;
+  animation-duration: 10.5s;
+  animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes yellowpulse {
+  0%   {color: black;}
+  50%  {color: gold;}
+  100% {color: black;}
+}
+
+@keyframes yellowpulse {
+  0%   {color: black;}
+  50%  {color: gold;}
+  100% {color: black;}
+}
+
+.redPulse {
+  -webkit-animation-name: redpulse; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 10s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-iteration-count: infinite;
+  animation-name: redpulse;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes redpulse {
+  0%   {color: black;}
+  50%  {color:  #ff8000;}
+  100% {color: black;}
+}
+
+@keyframes redpulse {
+  0%   {color: black;}
+  50%  {color:  #ff8000;}
+  100% {color: black;}
+}
+
+.bluePulse {
+  -webkit-animation-name: bluepulse; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 9.5s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-iteration-count: infinite;
+  animation-name: bluepulse;
+  animation-duration: 9.5s;
+  animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes bluepulse {
+  0%   {color: black;}
+  50%  {color:  dodgerblue;}
+  100% {color: black;}
+}
+
+@keyframes bluepulse {
+  0%   {color: black;}
+  50%  {color:  dodgerblue;}
+  100% {color: black;}
+}
