--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ div{
 	text-justify: inter-word;
 }
 	
-a {text-decoration:none;font-weight:normal;font-size:175%;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
+a {text-decoration:none;font-weight:italic;font-size:170%;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
 
 a:link {color:black}
 
@@ -172,13 +172,13 @@ position:relative;top:5px;}
 
 #topnavDropMenu{
 background-color:white;z-index:5;display:none;border: 2px solid #f3f3f3;position:absolute;
-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:30em;min-height:350px;
+box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:25em;min-height:20em;
 animation: fadein 0.5s;
 }
 
 #dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
-#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:120%;}
+#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:130%;}
 
 /*#dropMenu-content a:hover {background-color: #f1f1f1;}*/
 
