--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,7 +1,9 @@
 /* mobile CSS*/
 #topnavDropMenuMobile{float:left;display:none;z-index:5;
-background-color: lightgrey;width:100%; margin:0;padding:0.5em 0 0 0;
-margin:0 0 2em 0;}
+background-color: lightgrey;width:100%; padding:0.5em 0 0 0;
+margin:0 0 0 0;
+box-shadow: 0 0 8px 0 rgba(0,0,0,0.2); 
+}
 
 #topnavDropMenuMobile ul{ list-style-type: none;}
 
@@ -24,11 +26,19 @@ margin:0 0 2em 0;}
 	}
 
 .disabledButton{
-	opacity:0.3;
+	/*opacity:0.3;
 	-moz-user-select: none; 
 	-webkit-user-select: none; 
 	-ms-user-select:none; 
 	user-select:none;
 	-o-user-select:none;
-	cursor:default;
+	cursor:default;*/
 }
+
+.disabledButton:hover{
+	color:red;
+	-ms-transform: scale(1.1); /* IE 9 */
+	-webkit-transform: scale(1.1); /* Safari 3-8 */
+	transform: scale(1.1); 
+	border-bottom :2px dodgerblue solid;
+	}
