--- a/css/style-wijaslides.css
+++ b/css/style-wijaslides.css
@@ -3,12 +3,13 @@
 	perspective-origin: 50% 100px;
 	height:450px;
 	z-index:0;
+	margin:2em auto;
 	}
 
 .slideBox{
 	z-index:0;
-	margin-top:0px;
-	margin-bottom:50px; 
+	margin-top:4em;
+	margin-bottom:2em; 
 	margin-right:auto;
 	margin-left:auto;
 	position:relative;
@@ -155,7 +156,7 @@
 .popBox {display:none;z-index:2;
 		margin:1.2em; 
 		position:absolute;
-		padding:2em;
+		padding:3em;
         border-radius: 0.5em;
 		width:22.5em;
 		min-height:11.25em;
