--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ overflow: auto;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
 min-width:550px;
 }
+#content {padding:0 2em; margin:1em 0 2em 0;}
 			
 .hideable {display:none}
 
@@ -216,9 +217,9 @@ animation: fadein 0.5s;
 #firstPost {float:left; margin:2em 3em;padding:20x 20px;}
 #firstPost p{text-align:left; font-size:100%}
 
-#footer {clear:both; padding:2px 0;float:bottom; overflow:hidden;
-         width:100%;text-align:center;margin-bottom:0;}
-#footer p{font-size:80%;font-weight:italic;margin:4em auto 1em auto;text-align:center;}
+#footer {clear:both;float:bottom; overflow:hidden;
+         width:100%;text-align:center;margin:4em auto 1em auto;}
+#footer p{font-size:80%;font-weight:italic;text-align:center;}
 
 .greenPulse {
   -webkit-animation-name: greenpulse; /* Safari 4.0 - 8.0 */
