--- a/css/style-table.css
+++ b/css/style-table.css
@@ -3,7 +3,7 @@
 #tableContact tr:nth-child(even){background-color: #f2f2f2;}
 #tableContact td {width:50%}
 #tableContact img {max-height:75px; padding:10px;}
-#tableContact div{padding:20px 20px 20px 20px;}
+#tableContact div{padding:20px 20px 20px 20px;min-height:95px;min-width:95px;}
 
 #mailBox{
 	text-align:left;
