--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
 
 #wrapper{float:center; margin:0px auto; width:900px;
 background-color: white; 
-min-height:500px; 
+min-height:900px; 
 margin-bottom:0px; margin-top:0px;
 padding:0;
 overflow: auto;
@@ -217,7 +217,9 @@ animation: fadein 0.5s;
 #firstPost {float:left; margin:2em 3em;padding:20x 20px;}
 #firstPost p{text-align:left; font-size:100%}
 
-#footer {clear:both;float:bottom; overflow:hidden;
+#footer {clear:both; overflow:hidden;
+    display:inline-block;
+    vertical-align:bottom;
          width:100%;text-align:center;margin:4em auto 1em auto;}
 #footer p{font-size:80%;font-weight:italic;text-align:center;}
 
