--- a/css/style-mailbox.css
+++ b/css/style-mailbox.css
@@ -21,7 +21,7 @@
   border-radius: 4px;
   box-sizing: border-box;}
 
-#mailBox input[type=submit]{
+#mailBox input[type=button]{
   width:100%;z-index:7;
   background-color: #45a049;
   color: white;
@@ -31,7 +31,7 @@
   border-radius: 8px;
   cursor: pointer;}
   
-#mailBox  input[type=submit]:hover {
+#mailBox  input[type=button]:hover {
   background-color: #ff8000;
 }
 
@@ -44,5 +44,5 @@
 	  border-radius: 8px;
 	  cursor: pointer;
 	}
-
+	
 #mailBox button:hover {background-color: #ff8000;}
