--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,14 @@ min-width:550px;
 	transform: scale(1.05); 
 }
 
+.notificationBox {
+	border-radius:0.5em;border: 2px solid #f3f3f3;
+	background-color:#f3f3f3;
+	width:80%;color:dodgerblue;margin:0 auto;
+	padding:1.2em;
+	display:block;
+	}
+
 .menuButton {color:black;z-index:5;display:inline-block; padding:0 0 0 0;background-color:white;
 position:relative;top:5px;}
 
