--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h3 {margin:10px 0 15px 0;text-align:center; padding:20px 0;
             font-weight:normal;line-height:1.2em;}
 
 h4 {margin:1em 0 0.5em 0;text-align:center; padding:0;
-            font-size:125%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
+            font-size:130%; font-family: Consolas, Georgia, "Times New Roman", Times, serif;
             font-weight:italic; line-height:1.2em;}
 
 h5 {margin:0 0 0.5em 0;text-align:center; padding:0;
@@ -79,11 +79,13 @@ min-width:550px;
 
 .notificationBox {
 	border-radius:0.5em;border: 2px solid #f3f3f3;
-	background-color:#f3f3f3;
-	width:80%;color:dodgerblue;margin:0 auto;
+	background-color:dodgerblue;
+	width:75%;color:white;margin:0 auto;
 	padding:1.2em;
-	display:block;
+	display:none;
 	}
+	
+.notificationBox p{font-size:110%;}
 
 .menuButton {color:black;z-index:5;display:inline-block; padding:0 0 0 0;background-color:white;
 position:relative;top:5px;}
@@ -313,4 +315,24 @@ animation: fadein 0.5s;
   0%   {color: black;}
   50%  {color:  dodgerblue;}
   100% {color: black;}
+}
+
+.slowFadeOut {
+	animation: slowfadeout 5s;
+}
+
+@keyframes slowfadeout  {
+  0%   {opacity:1;}
+  25%  {opacity:0.90;}
+  50%  {opacity:0.85;}
+  75%  {opacity:0.50;}
+  100% {opacity:0;}
+}
+
+@-webkit-keyframes slowfadeout  {
+  0%   {opacity:1;}
+  25%  {opacity:0.90;}
+  50%  {opacity:0.85;}
+  75%  {opacity:0.50;}
+  100% {opacity:0;}
 }
