--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,7 +1,7 @@
 /* mobile CSS*/
 #topnavDropMenuMobile{float:left;display:none;z-index:5;
 background-color: lightgrey;width:100%; padding:0.5em 0 0 0;
-margin:0 0 0 0;
+margin:0 0 2em 0;
 box-shadow: 0 0 8px 0 rgba(0,0,0,0.2); 
 }
 
