--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ position:relative;top:5px;}
 
 #topnav{width:100%;background-color:white; overflow:hidden;}
 
-#menuIconWrapper{background-color:white;position:relative;z-index:5;width:auto;
+#menuIconWrapper{background-color: white;position:relative;z-index:5;width:auto;
 				display:inline-block;margin:10px 0 0 10px;padding:0;}
 
 /*#menuIconWrapper:hover{background-color:white;}*/
@@ -209,7 +209,7 @@ animation: fadein 0.5s;
     left: 0;
 	display: none; 
 	overflow: auto;
-	background-color: rgb(0,0,0);
+	/*background-color: rgb(0,0,0);*/
 	background-color: rgba(0,0,0,0.4);
 	z-index:1;
 }
