--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ overflow: auto;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
 min-width:550px;
 }
-#content {padding:0 2em; margin:1em 0 2em 0;}
+#content {padding:0 2em; margin:1em 0 0 0;}
 			
 .hideable {display:none}
 
