--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ overflow: auto;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
 min-width:550px;
 }
-#content {padding:0 2em; margin:1em 0 0 0;}
+#content {padding:0 1em; margin:0 0 0 0;}
 			
 .hideable {display:none}
 
@@ -233,7 +233,7 @@ animation: fadein 0.5s;
 #footer {clear:both; overflow:hidden;
     display:inline-block;
     vertical-align:bottom;
-         width:100%;text-align:center;margin:4em auto 1em auto;}
+         width:100%;text-align:center;margin:2em auto 1em auto;}
 #footer p{font-size:80%;font-weight:italic;text-align:center;}
 
 .greenPulse {
