--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
 #wrapper{float:center; margin:0px auto; width:900px;
 background-color: white; 
 min-height:900px; 
-margin-bottom:0px; margin-top:0px;
 padding:0;
 overflow: auto;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
@@ -247,13 +246,13 @@ animation: fadein 0.5s;
 
 @-webkit-keyframes greenpulse {
   0%   {color: black;}
-  50%  {color: green;}
+  50%  {color: lightgreen;}
   100% {color: black;}
 }
 
 @keyframes greenpulse {
   0%   {color: black;}
-  50%  {color: green;}
+  50%  {color: lightgreen;}
   100% {color: black;}
 }
 
