--- a/css/style-table.css
+++ b/css/style-table.css
@@ -1,6 +1,6 @@
 #tableContact {width:50%; margin:4em auto 4em auto; display:block;}
-#tableContact tr:nth-child(odd){background-color: #f2f2f2;}
-#tableContact tr:nth-child(even){background-color: #f2f2f2;}
+#tableContact tr:nth-child(odd){background-color: dodgerblue;}
+#tableContact tr:nth-child(even){background-color: #ff8000;}
 #tableContact td {width:50%}
 #tableContact img {max-height:75px; padding:10px;}
 #tableContact div{padding:20px 20px 20px 20px;min-height:95px;min-width:95px;}
@@ -20,15 +20,15 @@ label{color:black;width:100%;}
 }
 
 @-webkit-keyframes bluebeat {
-  0%   {background-color: #f2f2f2;}
-  50%  {background-color: dodgerblue;}
-  100% {background-color: #f2f2f2;}
+  0%   {background-color: dodgerblue;}
+  50%  {background-color: #f2f2f2;}
+  100% {background-color: dodgerblue;}
 }
 
 @keyframes bluebeat {
-  0%   {background-color: #f2f2f2;}
-  50%  {background-color: dodgerblue;}
-  100% {background-color: #f2f2f2;}
+  0%   {background-color: dodgerblue;}
+  50%  {background-color: #f2f2f2;}
+  100% {background-color: dodgerblue;}
 }
 
 .blueBeatFont {
@@ -62,14 +62,14 @@ label{color:black;width:100%;}
 }
 
 @-webkit-keyframes redbeat {
-  0%   {background-color: #f2f2f2;}
-  50%  {background-color: #ff8000;}
-  100% {background-color: #f2f2f2;}
+  0%   {background-color: #ff8000;}
+  50%  {background-color: #f2f2f2;}
+  100% {background-color: #ff8000;}
 }
 
 @keyframes redbeat {
-  0%   {background-color: #f2f2f2;}
-  50%  {background-color: #ff8000;}
-  100% {background-color: #f2f2f2;}
+  0%   {background-color: #ff8000;}
+  50%  {background-color: #f2f2f2;}
+  100% {background-color: #ff8000;}
 }
 
