--- a/css/style-wijaslides.css
+++ b/css/style-wijaslides.css
@@ -1,23 +1,29 @@
 :root {
-	--main-half-width:150px;
-	--main-width:300px;
-	--main-height:600px;
-	--main-minus-half-width:-150px;
-	--main-minus-width:-300px;
+	/* gold number ratio between H and L */
+	--main-half-width:139px;
+	--main-width:278px;
+	--main-minus-half-width:-139px;
+	--main-minus-width:-278px;
+	--main-half-height:225px;
+	--main-minus-half-height:-225px;
+	--main-height:450px;
+	/* variable de bricolage : les transformations CSS sont beugées : brico=-(H-L) */
+	--main-minus-brico:-172px;
 }
 
 #wijaSlidesWrapper{
-	perspective: 800px;
+	perspective: 1178px;
 	perspective-origin: 50% var(--main-half-width);
-	height:550px;
+	height:728px;
 	z-index:0;
-	margin:3em auto 3em auto;
+	padding:1em 0 0 0;
+	margin:1.62em auto 1.62em auto;
 	}
 
 .slideBox{
 	z-index:0;
-	margin-top:4em;
-	margin-bottom:2em; 
+	margin-top:2.61em;
+	margin-bottom:2.61em; 
 	margin-right:auto;
 	margin-left:auto;
 	position:relative;
@@ -61,45 +67,45 @@
 
 .back {
 	transform: translateZ(var(--main-minus-half-width)) rotateY(180deg);
-	-ms-transform: perspective(800px) translateZ(var(--main-minus-half-width)) rotateY(180deg);
+	-ms-transform: perspective(1178px) translateZ(var(--main-minus-half-width)) rotateY(180deg);
 	-webkit-transform: translateZ(var(--main-minus-half-width)) rotateY(180deg);	
 	-moz-transform: translateZ(var(--main-minus-half-width)) rotateY(180deg);	
 }
 .right {
 	transform: rotateY(90deg) translateX(var(--main-half-width));
 	transform-origin: top right;
-	-ms-transform: perspective(800px) rotateY(90deg) translateX(var(--main-half-width));
-	-ms-transform-origin: perspective(800px) top right;
+	-ms-transform: perspective(1178px) rotateY(90deg) translateX(var(--main-half-width));
+	-ms-transform-origin: perspective(1178px) top right;
 	-webkit-transform: rotateY(90deg) translateX(var(--main-half-width));
 	-webkit-transform-origin: top right;
 }
 .left {
 	transform: rotateY(270deg) translateX(var(--main-minus-half-width));
 	transform-origin: center left;
-	-ms-transform: perspective(800px) rotateY(270deg) translateX(var(--main-minus-half-width));
-	-ms-transform-origin: perspective(800px) center left;
+	-ms-transform: perspective(1178px) rotateY(270deg) translateX(var(--main-minus-half-width));
+	-ms-transform-origin: perspective(1178px) center left;
 	-webkit-transform: rotateY(270deg) translateX(var(--main-minus-half-width));
 	-webkit-transform-origin: center left;
 }
 .top {
 	transform: rotateX(-90deg) translateY(var(--main-minus-half-width));
 	transform-origin: top center;
-	-ms-transform: perspective(800px)  rotateX(-90deg) translateY(var(--main-minus-half-width));
-	-ms-transform-origin: perspective(800px)  top center;
+	-ms-transform: perspective(1178px)  rotateX(-90deg) translateY(var(--main-minus-half-width));
+	-ms-transform-origin: perspective(1178px)  top center;
 	-webkit-transform: rotateX(-90deg) translateY(var(--main-minus-half-width));
 	-webkit-transform-origin: top center;	
 }
 .bottom {
-	transform: rotateX(90deg) translateY(var(--main-half-width)) translateZ(var(--main-minus-width));
+	transform: rotateX(90deg) translateY(var(--main-half-width)) translateZ(var(--main-minus-brico));
 	transform-origin: bottom center;
-	-ms-transform: perspective(800px) rotateX(90deg) translateY(var(--main-half-width)) translateZ(var(--main-minus-width));
-	-ms-transform-origin: perspective(800px) bottom center;
-	-webkit-transform: rotateX(90deg) translateY(var(--main-half-width)) translateZ(var(--main-minus-width));
+	-ms-transform: perspective(1178px) rotateX(90deg) translateY(var(--main-half-width)) translateZ(var(--main-minus-brico));
+	-ms-transform-origin: perspective(1178px) bottom center;
+	-webkit-transform: rotateX(90deg) translateY(var(--main-half-width)) translateZ(var(--main-minus-brico));
 	-webkit-transform-origin: bottom center;
 }
 .front {
 	transform: translateZ(var(--main-half-width));
-	-ms-transform: perspective(800px) translateZ(var(--main-half-width));
+	-ms-transform: perspective(1178px) translateZ(var(--main-half-width));
 	-webkit-transform: translateZ(var(--main-half-width));
 }
 
@@ -166,8 +172,8 @@
 		position:absolute;
 		padding:3em;
         border-radius: 0.5em;
-		width:22.5em;
-		min-height:11.25em;
+		max-width:22.5em;
+		min-height:13.9em;
 		font-size:90%;
 		font-family: Consolas, Georgia, "Times New Roman", Times, serif;
         line-height:1.5em;
