--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ div{
 	text-justify: inter-word;
 }
 	
-a {text-decoration:none;font-weight:italic;font-size:170%;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
+a {text-decoration:none;font-weight:italic;font-size:162%;line-height:1.2em;font-family: Consolas, Georgia, "Times New Roman", Times, serif;}
 
 a:link {color:black}
 
@@ -177,7 +177,9 @@ position:relative;top:5px;}
 #topnav{width:100%;background-color:white; overflow:hidden;}
 
 #menuIconWrapper{background-color: white;position:relative;z-index:5;width:auto;
-				display:inline-block;margin:10px 0 0 10px;padding:0;}
+				display:inline-block;margin:10px 0 0 10px;padding:0;
+				background-color: rgba(0,0,0,0.4);height:2.5em;
+				}
 
 /*#menuIconWrapper:hover{background-color:white;}*/
 
@@ -185,13 +187,13 @@ position:relative;top:5px;}
 
 #topnavDropMenu{
 background-color:white;z-index:5;display:none;border: 2px solid #f3f3f3;position:absolute;
-box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:25em;min-height:20em;
+box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:25em;min-height:25em;
 animation: fadein 0.5s;
 }
 
 #dropMenu-content{z-index:5;animation: fadein 1.5s;}
 
-#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:130%;}
+#dropMenu-content ul a{display:block;padding:8px 16px 8px 16px;line-height:130%;text-align:left;}
 
 /*#dropMenu-content a:hover {background-color: #f1f1f1;}*/
 
@@ -200,7 +202,6 @@ animation: fadein 0.5s;
 /* #topnavDropMenu a {border-bottom :2px #f3f3f3 ridge;} */
 
 #overlay {
-    background-color: green; /* your color */
     width: 100%;
     height: 100%;
     position: fixed;
