adding nice textbox in about section

--- a/css/style.css
+++ b/css/style.css
@@ -355,3 +355,9 @@ animation: fadein 0.5s;
 }
 
 .enabledBtn:hover{background-color: #ff8000;}
+
+.textBox{border :2px gray solid;border-radius:0.5em;padding:0.5em 1em;margin:1.2em auto;}
+
+.textBox span{display: inline;float:right;}
+
+.textBox a{color:blue;text-align:right;font-size:90%;}
