--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
 
 #wrapper{float:center; margin:0px auto; width:900px;
 background-color: white; 
-min-height:900px; 
+min-height:728px; 
 padding:0;
 overflow: auto;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
@@ -230,10 +230,11 @@ animation: fadein 0.5s;
 #firstPost {float:left; margin:2em 3em;padding:20x 20px;}
 #firstPost p{text-align:left; font-size:100%}
 
-#footer {clear:both; overflow:hidden;
-    display:inline-block;
-    vertical-align:bottom;
-         width:100%;text-align:center;margin:2em auto 1em auto;}
+#footer {clear:both;
+		 display:absolute;
+		 bottom:2em;
+		 margin:2em auto;
+         width:100%;text-align:center;}
 #footer p{font-size:80%;font-weight:italic;text-align:center;}
 
 .greenPulse {
@@ -358,6 +359,6 @@ animation: fadein 0.5s;
 
 .textBox{border :2px gray solid;border-radius:0.5em;padding:0.5em 1em;margin:1.2em auto;}
 
-.textBox span{display: inline;float:right;}
+.textBox span{display: inline;float:right;vertical-align:middle;}
 
 .textBox a{color:blue;text-align:right;font-size:90%;}
