--- a/css/style-mailbox.css
+++ b/css/style-mailbox.css
@@ -17,6 +17,7 @@
   width:100%;z-index:7;
   padding: 0.4em 1.2em;
   margin: 0 0 0.5em 0;
+  font-size:110%;
   /* display: inline-block; */
   border: 1px solid #ccc;
   border-radius: 4px;
