--- a/css/style-wijaslides.css
+++ b/css/style-wijaslides.css
@@ -187,7 +187,7 @@ p em{font-weight:bold;color:blue;}
 
 .popBox p a{
 			margin:0 0 0 0;text-align:center; padding:0 0;
-            font-size:100%; color:black;
+            color:black;
             font-weight:normal;line-height:1.2em;}
 			
 .social_media_button{border-radius:50%;margin:0.5em auto; }
@@ -207,7 +207,7 @@ p em{font-weight:bold;color:blue;}
 	position:absolute;
 	}
 
-.wijaSlide h3 {font-size:75px;}
+.wijaSlide h3 {font-size:5em;}
 
 .rotateLeft{
   -webkit-transform-style: preserve-3d; /* Safari 3-8  */  
