--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html{font-size:90%;} 
 @media(min-width:60em){html{font-size: 120%}}
 
-body{background-color: #c2c4d8;font-size:16px;padding:0;}
+body{background-color: #c2c4d8;font-size:16px;padding:0;margin:0;}
 
 h1 {
     font-family: Consolas, Georgia, "Times New Roman", Times, serif;
@@ -49,12 +49,13 @@ a:visited {color:black}
 
 ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
 
-#wrapper{float:center; margin:0px auto; width:900px;
+#wrapper{margin:0px auto; width:900px;
 background-color: white; 
 min-height:728px; 
 padding:0;
+border-top-width:0;
 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
-min-width:728px;
+min-width:500px;
 }
 #content {padding:0 1em; margin:0 0 0 0;}
 			
@@ -213,7 +214,7 @@ animation: fadein 0.5s;
 	z-index:1;
 }
 		
-#wijaInfo {margin:0 auto;float:center;width:100%;overflow:hidden; }
+#wijaInfo {margin:0 auto;width:100%;overflow:hidden; }
 			
 #workWrapper {float:left;}
 
@@ -228,8 +229,7 @@ animation: fadein 0.5s;
 
 
 #footer {clear:both;
-		 display:absolute;
-		 bottom:4em;
+		 bottom:4em;padding:2em;
 		 margin:4em auto;
          width:100%;text-align:center;}
 #footer p{font-size:80%;font-weight:italic;text-align:center;}
