--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -4,6 +4,7 @@ background-color: lightgrey;width:100%; padding:0 0 0 0;
 margin:0 0 0 0; overflow:hidden;
 box-shadow: 0 0 8px 0 rgba(0,0,0,0.2); 
 }
+#topnavMobile{position:fixed;overflow:hidden;width:100%;display:none;}
 
 #topnavDropMenuMobile ul{ list-style-type: none;}
 
