--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ animation: fadein 0.5s;
 	z-index:1;
 }
 		
-#wijaInfo {margin:0 auto;width:100%;overflow:hidden; }
+#wijaInfo {margin:0;width:100%;overflow:hidden; padding:0;}
 			
 #workWrapper {float:left;}
 
@@ -319,8 +319,8 @@ animation: fadein 0.5s;
 }
 
 .slowFadeOut {
-	animation: slowfadeout 5s;
-	-webkit-animation: slowfadeout 5s;
+	animation: slowfadeout 15s;
+	-webkit-animation: slowfadeout 15s;
 }
 
 @keyframes slowfadeout  {
