--- a/css/style-wijaslides.css
+++ b/css/style-wijaslides.css
@@ -177,10 +177,10 @@
 		box-shadow:inset 0px 0px 30px dodgerblue;
 }
 
-p em{font-weight:bold;color:blue;}
+p em{font-style:normal;color:blue;}
 
 
-.popBox a{font-size:125%;text-decoration:underline;color:blue;margin:1.2em 0 0 0;}
+.popBox a{font-size:125%;text-decoration:underline;color:blue;margin:1.2em 0 0 0;cursor:pointer;}
 
 .popBox p a{
 			margin:0 0 0 0;text-align:center; padding:0 0;
